# stratix-python

./: .coveragerc  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  SUMMARY.md  mypy.ini  package-lock.json  package.json  pyproject.toml
.github/workflows/: auto-release.yaml  check-format.yaml  check-lint.yaml  create-tag.yaml  dep-tree-guard.yaml  extras-matrix.yaml  publish-sdk.yaml  publish-to-aws.yaml  release-tag.yaml  run-tests.yaml  sync-docs.yaml  test-publish-sdk.yaml
.husky/: pre-commit
docs/: README.md  SUMMARY.md  samples-guide.md  telemetry.md
docs/adapters/: CONTRIBUTING.md  PERSONA_REVIEW.md  STATUS.md  benchmark_import.md  certification.md  embedding.md  frameworks-agentforce.md  frameworks-agno.md  frameworks-autogen.md  frameworks-bedrock_agents.md  frameworks-benchmark_import.md  frameworks-browser_use.md  frameworks-crewai.md  frameworks-embedding.md  frameworks-google_adk.md  frameworks-langchain-lcel.md  frameworks-langchain.md  frameworks-langfuse.md  frameworks-langgraph-l2-events.md  frameworks-langgraph.md  frameworks-llama_index.md  frameworks-ms_agent_framework.md  frameworks-openai_agents.md  frameworks-pydantic_ai.md  frameworks-semantic_kernel.md  frameworks-smolagents.md  frameworks-strands.md  handoff-standardization.md  importer-base.md  memory-contract.md  multi-tenancy.md  otel-genai-conventions.md  otlp.md  protocols-a2a.md  protocols-a2ui.md  protocols-agui.md  protocols-ap2.md  protocols-mcp.md  protocols-ucp.md  providers-anthropic.md  (+14 more)
docs/api-reference/: README.md  client.md  errors.md  evaluations.md  instrumentation.md  judge-optimizations.md  judges.md  models-benchmarks.md  public-client.md  results.md  scorers.md  trace-evaluations.md  traces.md
docs/cli/: commands.md  examples.md  getting-started.md
docs/examples/: README.md  advanced-usage.md  creating-evaluations.md  judges-and-traces.md  models-and-benchmarks.md  public-api.md  retrieving-results.md  timeouts.md
docs/getting-started/: authentication.md  installation.md  quickstart.md
docs/instrumentation/: README.md  frameworks.md  providers.md  quickstart.md
docs/review/: round-1.md  round-2.md
docs/security/: api-key-management.md  data-privacy.md  environment-variables.md  rate-limiting.md
docs/troubleshooting/: authentication.md  common-issues.md  error-codes.md
examples/: all_results_no_pagination.py  async_client.py  async_client_simple.py  async_judges_and_traces.py  async_run_evaluations.py  client.py  client_simple.py  compare_evaluations.py  create_custom_benchmark.py  create_custom_model.py  create_smart_benchmark.py  demo.py  evaluation_sorting.py  fetch_results_async.py  get_benchmark_prompts.py  get_benchmarks.py  get_evaluation.py  get_models.py  instrument_langchain.py  instrument_openai.py  integrations.py  judge_optimizations.py  judges.py  manage_project_models_benchmarks.py  paginated_results.py  public_benchmarks.py  public_evaluations.py  public_models.py  trace_evaluations.py  traces.py
examples/cli/: 01_quickstart.sh  02_evaluate.sh  03_judge_workflow.sh  04_bulk_eval.sh  (+6 more)
marc-only/: dump_all_metadata.py  dump_public_catalog.py
samples/: README.md  _helpers.py
scripts/: README.md  __init__.py  bootstrap  emit_adapter_manifest.py  get_version.sh  lint  port_adapter.py  port_protocol.py  publish.sh  push-release-tag.sh  push_release_tag.sh  regen_dep_baselines.py  rewrite_imports.py  rewrite_internal_refs.py  template-version.sh  test  test_auth_e2e.py  test_coverage  validate-release-tag.sh  validate_release_tag.sh
src/: CONTRIBUTING.md  README.md  _version.py
tests/: .env.example  conftest.py  test_base_client.py  test_client.py  test_exceptions.py  test_integration.py  test_mcp_server.py  test_models.py  test_models_custom_live.py  test_resource.py  test_samples.py  test_samples_e2e.py  test_telemetry.py  test_utils.py
vscode-extension/: .vscodeignore  README.md  jest.config.js  package.json
(+1241 files in other folders)
