[project]
name = "layerlens"
version = "1.0.2"
description = "The official Python library for the LayerLens Atlas API"
license = "Apache-2.0"
authors = [{ name = "LayerLens", email = "support@layerlens.ai" }]
dependencies = ["httpx>=0.23.0, <1", "pydantic>=1.9.0, <3", "requests"]
requires-python = ">= 3.8"
classifiers = [
  "Typing :: Typed",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Operating System :: POSIX",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/LayerLens/atlas-python"
Repository = "https://github.com/LayerLens/atlas-python"

[project.scripts]
atlas = "atlas.cli:main"


[tool.rye]
managed = true
# version pins are in requirements-dev.lock
dev-dependencies = [
  "mypy",
  "pytest",
  "pyright==1.1.399",
  "pytest-cov>=6.2.1",
  "ruff",
  "types-requests",
]

[tool.rye.scripts]
format = { chain = [
  "format:ruff",
  "fix:ruff",
  # run formatting again to fix any inconsistencies when imports are stripped
  "format:ruff",
] }
"format:ruff" = "ruff format"

"lint" = { chain = ["check:ruff", "typecheck:src", "check:importable"] }
"lint:all" = { chain = ["check:ruff", "typecheck", "check:importable"] }
"check:ruff" = "ruff check ."
"fix:ruff" = "ruff check --fix ."

"check:importable" = "python -c 'import atlas'"

# Type checking for production code only (excludes tests)
"typecheck:src" = { chain = ["typecheck:pyright:src", "typecheck:mypy:src"] }

# Type checking for all code including tests
typecheck = { chain = ["typecheck:pyright", "typecheck:mypy"] }

"typecheck:pyright" = "pyright"
"typecheck:pyright:src" = "pyright src"
"typecheck:verify-types" = "pyright --verifytypes atlas --ignoreexternal"
"typecheck:mypy" = "mypy ."
"typecheck:mypy:src" = "mypy src"

[tool.ruff]
line-length = 120
output-format = "grouped"
target-version = "py37"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
  # isort
  "I",
  # bugbear rules
  "B",
  # remove unused imports
  "F401",
  # bare except statements
  "E722",
  # unused arguments
  "ARG",
  # print statements
  "T201",
  "T203",
  # misuse of typing.TYPE_CHECKING
  "TC004",
  # import rules
  "TID251",
]
ignore = [
  # mutable defaults
  "B006",
]
unfixable = [
  # disable auto fix for print statements
  "T201",
  "T203",
]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"functools.lru_cache".msg = "This function does not retain type information for the wrapped function's arguments; The `lru_cache` function from `_utils` should be used instead"

[tool.ruff.lint.isort]
length-sort = true
length-sort-straight = true
combine-as-imports = true
extra-standard-library = ["typing_extensions"]
known-first-party = ["openai", "tests"]

[tool.ruff.lint.per-file-ignores]
"bin/**.py" = ["T201", "T203"]
"scripts/**.py" = ["T201", "T203"]
"tests/**.py" = ["T201", "T203"]
"examples/**.py" = ["T201", "T203"]

[tool.pyright]
include = ["src", "tests"]
exclude = ["**/__pycache__"]
reportMissingTypeStubs = false

# Less strict settings for tests
executionEnvironments = [
  { root = "tests", reportGeneralTypeIssues = false, reportOptionalSubscript = false, reportOptionalMemberAccess = false, reportUntypedFunctionDecorator = false, reportUnknownArgumentType = false, reportUnknownMemberType = false, reportUnknownVariableType = false, reportUnnecessaryIsInstance = false, reportUnnecessaryComparison = false, reportArgumentType = false, reportCallIssue = false },
]
